feat: Add theme creation and generation commands, along with initial theme structures and configuration.

--- a/public/frontend/assets/css/main.css
+++ b/public/frontend/assets/css/main.css
@@ -1,9 +1,9 @@
 /*============================================
 
-   Theme Name: Tourex - Tour & Travel Booking html5 Template
+   Theme Name: Tour your World- Tour & Travel Booking html5 Template
    Author : Theme_Dox
    Support: https://themedox.ticksy.com
-   Description: Tourex - Tour & Travel Booking html5 Template
+   Description: Tour your World- Tour & Travel Booking html5 Template
    Version: 1.0.0
 
 ==============================================*/
